--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"/>
     <title>KEK Review 2023</title>
 </head>
 <body>
     <div id="stage">
-        <img src="assets/1.jpg" class="img-fluid">
-        <img src="assets/2.jpg" class="img-fluid">
-        <img src="assets/3.jpg" class="img-fluid">
-        <img src="assets/4.jpg" class="img-fluid">
-        <img src="assets/15.jpg" class="img-fluid">
-        <img src="assets/16.jpg" class="img-fluid">
-        <img src="assets/17.jpg" class="img-fluid">
-        <img src="assets/28.jpg" class="img-fluid">
-        <img src="assets/19.jpg" class="img-fluid">
-        <img src="assets/20.jpg" class="img-fluid">
+        <img src="assets/1.jpg">
+        <img src="assets/12.jpg">
+        <img src="assets/3.jpg">
+        <img src="assets/14.jpg">
+        <img src="assets/15.jpg">
+        <img src="assets/16.jpg">
+        <img src="assets/17.jpg">
+        <img src="assets/28.jpg">
+        <img src="assets/19.jpg">
+        <img src="assets/20.jpg">
+        <img src="assets/5.jpg">
+        <img src="assets/26.jpg">
+        <img src="assets/27.jpg">
+        <img src="assets/8.jpg">
+        <img src="assets/29.jpg">
+        <img src="assets/30.jpg">
+        <img src="assets/11.jpg">
+        <img src="assets/2.jpg">
+        <img src="assets/13.jpg">
+        <img src="assets/4.jpg">
+        <img src="assets/6.jpg">
+        <img src="assets/22.jpg">
+        <img src="assets/23.jpg">
+        <img src="assets/7.jpg">
+        <img src="assets/24.jpg">
+        <img src="assets/9.jpg">
+        <img src="assets/18.jpg">
+        <img src="assets/25.jpg">
+        <img src="assets/10.jpg">
     </div>
     <script src="script.js" async></script>
 </body>
